Update index with github beta link

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div class="tagline__secondary">Turn your Slack Conversations into project tickets.</div>
           <div class="tagline__tertiary">Simple.</div>
           <div class="landing__button">
-            <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/9842168/submissions/new">GET EARLY ACCESS</a>
-            <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login">LOG IN</a>
+            <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new">LOG IN WITH GITHUB</a>
+            <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login">LOG IN WITH SPRINTLY</a>
           </div>
         </div>
         <div class="landing__section">
