Replace BETA signup button with github issues

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
               Get Started!<div class="emoji__sparkling_heart"></div>
             </div>
             <div class="landing__button">
-              <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/9842168/submissions/new">JOIN THE BETA</a>
-              <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login">LOG IN</a>
+              <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new">LOG IN WITH GITHUB</a>
+              <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login">LOG IN WITH SPRINTLY</a>
             </div>
           </div>
         </div>
