Added optimizely snippet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
+    <script src="//cdn.optimizely.com/js/126772958.js"></script>
   </head>
   <body>
     <nav class="navbar party-navbar">
