--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="tagline__secondary">Turn your Slack Conversations into project tickets.</div>
         <div class="tagline__tertiary">Simple.</div>
         <div class="landing__button">
-          <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new">LOG IN WITH GITHUB</a>
-          <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login">LOG IN WITH SPRINTLY</a>
+          <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
+          <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login" onClick="ga('send', 'event', 'login', 'sprintly');">LOG IN WITH SPRINTLY</a>
         </div>
       </div>
       <div class="landing__section">
@@ -70,7 +70,7 @@
 
       <div class="beta__band visible-xs">
         <div class="landing__button">
-          <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new">LOG IN WITH GITHUB</a>
+          <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
         </div>
       </div>
 
@@ -146,8 +146,8 @@
             Get Started!<div class="emoji__sparkling_heart"></div>
           </div>
           <div class="landing__button">
-            <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new">LOG IN WITH GITHUB</a>
-            <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login">LOG IN WITH SPRINTLY</a>
+            <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
+            <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login" onClick="ga('send', 'event', 'login', 'sprintly');">LOG IN WITH SPRINTLY</a>
           </div>
         </div>
       </div>
