enable logging in with github

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="tagline__secondary">Turn your Slack Conversations into project tickets.</div>
         <div class="tagline__tertiary">Simple.</div>
         <div class="landing__button">
-          <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
+          <a class="btn party-button-secondary btn-block" href="https://partyline.sprint.ly/login" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
           <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login" onClick="ga('send', 'event', 'login', 'sprintly');">LOG IN WITH SPRINTLY</a>
         </div>
       </div>
