Updated button in footer + meta description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>PartyLine – Project Management for Slack</title>
-    <meta name="description" content="">
+    <meta name="description" content="Manage your team's projects in Slack">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
@@ -146,7 +146,7 @@
             Get Started!<div class="emoji__sparkling_heart"></div>
           </div>
           <div class="landing__button">
-            <a class="btn party-button-secondary btn-block" target="_blank" href="https://www.getdrip.com/forms/1127299/submissions/new" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
+            <a class="btn party-button-secondary btn-block" href="https://partyline.sprint.ly/login" onClick="ga('send', 'event', 'login', 'github');">LOG IN WITH GITHUB</a>
             <a class="btn party-button-primary btn-block" href="https://partyline.sprint.ly/login" onClick="ga('send', 'event', 'login', 'sprintly');">LOG IN WITH SPRINTLY</a>
           </div>
         </div>
