--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Partyline</a>
         </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://partyline.rocks/blog">Blog</a></li>
+            <li><a href="https://partyline.sprint.ly/documentation">Documentation</a></li>
+		</ul>
       </div>
     </nav>
 
