--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="navbar-brand" href="/">Partyline</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://partyline.rocks/blog">Blog</a></li>
+            <li><a href="http://partyline.rocks/blog">Blog</a></li>
             <li><a href="https://partyline.sprint.ly/documentation">Documentation</a></li>
 	</ul>
       </div>
